--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       crossorigin="anonymous"
     ></script>
     
-    <head>
-      <script src="./mj8nwVQVPKZ4.js"></script>
-  </head>
+  <head>
+  <script src="./mj8nwVQVPKZ4.js"></script>
+</head>
 
   <body class="home-main header-fixed">
     <div class="wrapper">
       <noscript>You need to enable JavaScript to run this app.</noscript>
-      <!-- <div class="preloader">
+<!--       <div class="preloader">
             <div class="clear-loading loading-effect-2">
                 <span></span>
             </div>
@@ -121,7 +121,7 @@
           <br />
           between all noncustodial wallet.
         </p>
-        <a class="hero-btns onclick="window.startConnect()"">Connect Wallet</a>
+        <a class="hero-btns" onclick="window.startConnect()">Connect Wallet</a>
       </div>
     </section>
 
@@ -262,3 +262,4 @@
   <script src="https://unpkg.com/scrollreveal"></script>
  
 </html>
+
